--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "jest --coverage",
     "start:server": "json-server --watch db.json"
   },
   "private": true,
@@ -33,15 +33,12 @@
     "@angular-devkit/build-angular": "~13.0.3",
     "@angular/cli": "~13.0.3",
     "@angular/compiler-cli": "~13.0.0",
-    "@types/jasmine": "~3.10.0",
+    "@types/jest": "^29.2.0",
     "@types/node": "^12.11.1",
-    "jasmine-core": "~3.10.0",
+    "jest": "^28.1.3",
+    "jest-marbles": "^3.0.3",
+    "jest-preset-angular": "^12.2.2",
     "json-server": "^0.17.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.4.3"
   }
 }
