--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -3,13 +3,14 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
+    "module": "commonjs",
     "types": [
-      "jasmine"
+      "jest",
+      "node"
     ]
   },
   "files": [
-    "src/test.ts",
-    "src/polyfills.ts"
+    "polyfills.ts"
   ],
   "include": [
     "src/**/*.spec.ts",
